--- a/src/app/layouts/content-layout/content-layout.component.html
+++ b/src/app/layouts/content-layout/content-layout.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <app-sidebar></app-sidebar>
+<!-- <div id="content" style="padding: 20px;">
 <router-outlet></router-outlet>
+</div> -->
