--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -1,27 +1,2 @@
-<div class="container mt-4">
-    <h3 class="text-center"> Meeting Invite</h3>
-    <div class="row justify-content-center mh">
-
-        <div class="input-group " style="width:65%;">
-            <input type="text" class="form-control" 
-                placeholder="Please enter emails and cell numbers separated by comma.">
-            <div class="input-group-append pheight" >
-                <button class="btn btn-secondary color-black" type="button"> <img src="assets/img/Patients.png"></button>
-            </div>
-        </div>
-    </div>
-    <div style="margin-left: 16%;">
-        <small id="numberHelp" class="form-text text-muted ml-3">Please do not include country code.</small>
-    </div>
-  
-
-    <div class="col-12 col-sm-12 col-md-12 my-3 my-3 r-center">
-        <button class="btn btn-primary invite-button" type="submit" style="background-color: #282828; width: 69%;"
-            >Invite
-        </button>
-
-    </div>
-    <!-- <p class="copyright text-center color-po">Powered by <a href="https://www.geniemd.com" target="_blank">GenieMD, Inc.</a></p> -->
-</div>
-
+<app-patients></app-patients>
 
