--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,23 +1,36 @@
 <!-- <app-header *ngIf="showHeader" [showIcon]="showIcon"></app-header> -->
-<div class="wrapper p-4">
+<div class="wrapper">
     <nav id="sidebar">
         <ul class="list-unstyled components">
             <li>
-                <a><img class="pr-4" src="assets/img/WaitingRoom.png" />content-1</a>
+                <a><img class="p-2" src="assets/img/WaitingRoom.png" /></a>
             </li>
             <li>
-                <a><img class="pr-4" src="assets/img/Scheduled.png" />content-2</a>
+                <a><img class="p-2" src="assets/img/Scheduled.png" /></a>
             </li>
             <li>
-                <a><img class="pr-4" src="assets/img/Patients.png" />content-3</a>
+                <a><img class="p-2" src="assets/img/Patients.png" /></a>
             </li>
             <li>
-                <a><img class="pr-4" src="assets/img/History.png" />content-4</a>
+                <a><img class="p-2" src="assets/img/History.png" /></a>
+            </li>
+            <li>
+                <a><img class="p-2" src="assets/img/WaitingRoom.png" /></a>
+            </li>
+            <li>
+                <a><img class="p-2" src="assets/img/Scheduled.png" /></a>
+            </li>
+            <li>
+                <a><img class="p-2" src="assets/img/Patients.png" /></a>
+            </li>
+            <li>
+                <a><img class="p-2" src="assets/img/History.png" /></a>
             </li>
         </ul>
     </nav>
+    <div id="content">
+        <router-outlet></router-outlet>
+    </div>  
 </div>
-<!-- Page Content -->
-<!-- <div id="content" [ngStyle]="{'padding':!showSideBar ? '0px':'20px'}"> -->
-    <router-outlet></router-outlet>
-<!-- </div> -->
+
+  
