--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -27,21 +27,60 @@
                 <li [ngbNavItem]="2">
                     <a ngbNavLink>Alerts</a>
                     <ng-template ngbNavContent>
-                        <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan
-                            four loko
-                            farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk
-                            aliquip
-                            jean shorts
-                            ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus
-                            mollit.
-                            Keytar
-                            helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio
-                            cillum
-                            wes anderson
-                            8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art
-                            party
-                            scenester
-                            stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
+                        <table class = "table table-hover table-bordered table-striped">
+                            <thead>
+                               <tr>
+                                  <th>Date</th>
+                                  <th>Alert</th>
+                                  <th>Detail</th>
+                                  <th>Action</th>
+                               </tr>
+                            </thead>
+                            <tbody>
+                               <tr>
+                                  <td>1/1/2021</td>
+                                  <td>Blood Pressure</td>
+                                  <td>Systolic 190 > 170</td>
+                                  <td>Click</td>
+                               </tr>
+                               <tr>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                               </tr>
+                               <tr>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                               </tr>
+                               <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                             </tr>
+                             <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                             </tr>
+                             <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                             </tr>
+                             <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                             </tr>
+                            </tbody>
+                         </table>
                     </ng-template>
                 </li>
                 <li [ngbNavItem]="3">
