--- a/src/app/pages/dashboard/patients/patients.component.scss
+++ b/src/app/pages/dashboard/patients/patients.component.scss
@@ -20,3 +20,7 @@
 .div_hover { background-color: #FFFFFF; }
 
 .div_hover:hover { background-color: lightblue; }
+.haven{
+    min-height: calc(100vh - 104px);
+
+}
