--- a/src/app/pages/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.scss
@@ -33,3 +33,12 @@
     padding: .5rem 1.5rem;
     font-size: 1.5rem;
 }
+.time {
+    margin-top:42px;
+}
+.center {
+    margin-left: 126px;
+}
+.bg-blue {
+    background-color: #4471c4;
+}
