--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
             </li>
         </ul>
     </nav>
-    <div id="content">
+    <div id="content" class="w-100">
         <router-outlet></router-outlet>
     </div>  
 </div>
