fix table color.

--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -27,6 +27,9 @@
                 <li [ngbNavItem]="2">
                     <a ngbNavLink>Alerts</a>
                     <ng-template ngbNavContent>
+                        <div class="p-4">
+                            Time Range       :   Last 7 days
+                        </div>
                         <table class = "table table-hover table-bordered table-striped">
                             <thead>
                                <tr>
@@ -44,40 +47,40 @@
                                   <td>Click</td>
                                </tr>
                                <tr>
-                                  <td></td>
-                                  <td></td>
-                                  <td></td>
-                                  <td></td>
+                                <td>1/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Systolic 190 > 170</td>
+                                <td>Click</td>
                                </tr>
                                <tr>
-                                  <td></td>
-                                  <td></td>
-                                  <td></td>
-                                  <td></td>
+                                <td>1/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Systolic 190 > 170</td>
+                                <td>Click</td>
                                </tr>
                                <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>1/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Systolic 190 > 170</td>
+                                <td>Click</td>
                              </tr>
                              <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>1/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Systolic 190 > 170</td>
+                                <td>Click</td>
                              </tr>
                              <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>1/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Systolic 190 > 170</td>
+                                <td>Click</td>
                              </tr>
                              <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>1/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Systolic 190 > 170</td>
+                                <td>Click</td>
                              </tr>
                             </tbody>
                          </table>
