feat: latest changes

--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -11,9 +11,9 @@
                     <a ngbNavLink>Vitals</a>
                     <ng-template ngbNavContent>
                         <h5 class="time">Time Range: <span class="center">Last 7 days</span></h5>
-                        <div class="col-9 p-3 mb-2 bg-blue text-white">Blood pressure</div>
-                        <div class="col-9 p-3 mb-2 bg-blue text-white">spo2</div>
-                        <div class="col-9 p-3 mb-2 bg-blue text-white">Weight</div>
+                        <div class="col-12 p-3 mb-4 mt-2 bg-blue text-white text-center">Blood pressure</div>
+                        <div class="col-12 p-3 mb-4 bg-blue text-white text-center">spo2</div>
+                        <div class="col-12 p-3 mb-4 bg-blue text-white text-center">Weight</div>
                     </ng-template>
                 </li>
                 <li [ngbNavItem]="2">
@@ -24,12 +24,12 @@
                         </div>
                         <table class = "table table-hover table-bordered table-striped">
                             <thead>
-                               <tr>
-                                  <th>Date</th>
-                                  <th>Alert</th>
-                                  <th>Detail</th>
-                                  <th>Action</th>
-                               </tr>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Alert</th>
+                                    <th>Detail</th>
+                                    <th>Action</th>
+                                </tr>
                             </thead>
                             <tbody>
                                <tr>
@@ -75,7 +75,7 @@
                                 <td>Click</td>
                              </tr>
                             </tbody>
-                         </table>
+                        </table>
                     </ng-template>
                 </li>
                 <li [ngbNavItem]="3">
@@ -121,74 +121,74 @@
                 <li [ngbNavItem]="4">
                     <a ngbNavLink>Care Team</a>
                     <ng-template ngbNavContent>
-                        <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
-                            diam. Nulla
-                            facilisi.
-                            Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
-                            eu,
-                            congue et odio.
-                            Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
-                            et. Sed
-                            diam urna,
-                            egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
-                            faucibus nisl
-                            enim, nec
-                            tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
-                            natoque
-                            penatibus et
-                            magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
-                            ultricies
-                            in eget
-                            neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
-                    </ng-template>
+                            <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
+                                diam. Nulla
+                                facilisi.
+                                Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
+                                eu,
+                                congue et odio.
+                                Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
+                                et. Sed
+                                diam urna,
+                                egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
+                                faucibus nisl
+                                enim, nec
+                                tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
+                                natoque
+                                penatibus et
+                                magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
+                                ultricies
+                                in eget
+                                neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+                        </ng-template>
                 </li>
                 <li [ngbNavItem]="5">
                     <a ngbNavLink>Profile</a>
                     <ng-template ngbNavContent>
-                        <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
-                            diam. Nulla
-                            facilisi.
-                            Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
-                            eu,
-                            congue et odio.
-                            Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
-                            et. Sed
-                            diam urna,
-                            egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
-                            faucibus nisl
-                            enim, nec
-                            tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
-                            natoque
-                            penatibus et
-                            magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
-                            ultricies
-                            in eget
-                            neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
-                    </ng-template>
+                            <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
+                                diam. Nulla
+                                facilisi.
+                                Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
+                                eu,
+                                congue et odio.
+                                Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
+                                et. Sed
+                                diam urna,
+                                egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
+                                faucibus nisl
+                                enim, nec
+                                tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
+                                natoque
+                                penatibus et
+                                magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
+                                ultricies
+                                in eget
+                                neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+                        </ng-template>
                 </li>
                 <li [ngbNavItem]="6">
                     <a ngbNavLink>History</a>
                     <ng-template ngbNavContent>
-                        <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
-                            diam. Nulla
-                            facilisi.
-                            Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
-                            eu,
-                            congue et odio.
-                            Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
-                            et. Sed
-                            diam urna,
-                            egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
-                            faucibus nisl
-                            enim, nec
-                            tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
-                            natoque
-                            penatibus et
-                            magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
-                            ultricies
-                            in eget
-                            neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
-                    </ng-template>
+                            <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
+                                diam. Nulla
+                                facilisi.
+                                Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
+                                eu,
+                                congue et odio.
+                                Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
+                                et. Sed
+                                diam urna,
+                                egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
+                                faucibus nisl
+                                enim, nec
+                                tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
+                                natoque
+                                penatibus et
+                                magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
+                                ultricies
+                                in eget
+                                neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+                        </ng-template>
                 </li>
             </ul>
 
