--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -1,5 +1,5 @@
 <table>
-    <div class="container-fluid haven">
+    <div class="container-fluid haven p-0">
         <div class="p-2 float-right">
             <button type="button" class="btn btn-info">+</button>
         </div>
