--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -169,25 +169,63 @@
                 <li [ngbNavItem]="6">
                     <a ngbNavLink>History</a>
                     <ng-template ngbNavContent>
-                            <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
-                                diam. Nulla
-                                facilisi.
-                                Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
-                                eu,
-                                congue et odio.
-                                Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
-                                et. Sed
-                                diam urna,
-                                egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
-                                faucibus nisl
-                                enim, nec
-                                tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
-                                natoque
-                                penatibus et
-                                magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
-                                ultricies
-                                in eget
-                                neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+                        <div class="p-4">
+                            Time Range       :   Last 7 days
+                        </div>
+                        <table class = "table table-hover table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Event</th>
+                                    <th>Attended By</th>
+                                    <th>Duration</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                               <tr>
+                                  <td>1/1/2021</td>
+                                  <td>Blood Pressure</td>
+                                  <td>Dr.Martha Jonas</td>
+                                  <td>10.11 Am </td>
+                               </tr>
+                               <tr>
+                                <td>7/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Dr.wiiliam</td>
+                                <td>10.20 Am</td>
+                               </tr>
+                               <tr>
+                                <td>8/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Dr.kate</td>
+                                <td>11.20 Am</td>
+                               </tr>
+                               <tr>
+                                <td>9/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Dr.Williams</td>
+                                <td>10.25 Am</td>
+                             </tr>
+                             <tr>
+                                <td>10/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Dr.Martha jonas</td>
+                                <td>10.26 Am</td>
+                             </tr>
+                             <tr>
+                                <td>11/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Dr.James</td>
+                                <td>10.30 Am</td>
+                             </tr>
+                             <tr>
+                                <td>12/1/2021</td>
+                                <td>Blood Pressure</td>
+                                <td>Dr.kate</td>
+                                <td>10.35 Am</td>
+                             </tr>
+                            </tbody>
+                        </table>
                         </ng-template>
                 </li>
             </ul>
