--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -145,25 +145,58 @@
                 <li [ngbNavItem]="5">
                     <a ngbNavLink>Profile</a>
                     <ng-template ngbNavContent>
-                            <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id
-                                diam. Nulla
-                                facilisi.
-                                Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt
-                                eu,
-                                congue et odio.
-                                Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices
-                                et. Sed
-                                diam urna,
-                                egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus
-                                faucibus nisl
-                                enim, nec
-                                tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius
-                                natoque
-                                penatibus et
-                                magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
-                                ultricies
-                                in eget
-                                neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+                            <table class="table table-striped table-border mt-2">
+                                <tbody>
+                             
+                                    <tr class="green"> 
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">First</td>
+                                        <td id="patientName" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">Singara
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Last Name </td>
+                                        <td id="patientGender" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">Vel</td>
+                                    </tr>
+                                    <tr class="green">
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Date of Birth
+                                        </td>
+                                        <td id="patientDOB" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">
+                                            01/01/2020
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Gender </td>
+                                        <td id="patientAddress" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">Male</td>
+                                    </tr>
+                                    <tr class="green">
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Email </td>
+                                        <td id="patientPhone" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">
+                                            test@yopmail.com
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Cell </td>
+                                        <td id="patientPhone" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">9874563210
+                                        </td>
+                                    </tr>
+                                    <tr class="green">
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Address </td>
+                                        <td id="patientPhone" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">no 12, san
+                                            street
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Devices </td>
+                                        <td id="patientPhone" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">BP, TH, GM,
+                                            SC
+                                        </td>
+                                    </tr>
+                                    <tr class="green">
+                                        <td scope="row" style="width: 50%; font-size: 18px; font-weight: 100 !important">Consent Forms </td>
+                                        <td id="patientPhone" style="font-size: 18px; font-weight: 100 !important; padding-left: 70px;">... </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </ng-template>
                 </li>
                 <li [ngbNavItem]="6">
