Feat: latest changes.

--- a/src/app/pages/dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.html
@@ -10,7 +10,9 @@
                 <li [ngbNavItem]="1">
                     <a ngbNavLink>Vitals</a>
                     <ng-template ngbNavContent>
-                        <h5 class="time">Time Range: <span class="center">Last 7 days</span></h5>
+                        <div class="p-4">
+                            Time Range       :   Last 7 days
+                        </div>
                         <div class="col-12 p-3 mb-4 mt-2 bg-blue text-white text-center">Blood pressure</div>
                         <div class="col-12 p-3 mb-4 bg-blue text-white text-center">spo2</div>
                         <div class="col-12 p-3 mb-4 bg-blue text-white text-center">Weight</div>
@@ -102,16 +104,53 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>
-                                            </td>
-                                            <td></td>
-                                            <td></td>
-                                            <td>
-                                            </td>
-                                            <td>
-                                            </td>
+                                           <td>1/1/2021</td>
+                                           <td>Blood Pressure</td>
+                                           <td>Dr.kate</td>
+                                           <td>Click</td>
+                                           <td></td>
                                         </tr>
-                                    </tbody>
+                                        <tr>
+                                         <td>1/1/2021</td>
+                                         <td>Blood Pressure</td>
+                                         <td>Dr.williams</td>
+                                         <td>Click</td>
+                                        </tr>
+                                        <tr>
+                                         <td>1/1/2021</td>
+                                         <td>Blood Pressure</td>
+                                         <td>Dr.Martha jonas</td>
+                                         <td>Click</td>
+                                         <td></td>
+                                        </tr>
+                                        <tr>
+                                         <td>1/1/2021</td>
+                                         <td>Blood Pressure</td>
+                                         <td>Dr.Kate</td>
+                                         <td>Click</td>
+                                      </tr>
+                                      <tr>
+                                         <td>1/1/2021</td>
+                                         <td>Blood Pressure</td>
+                                         <td>Dr.Williams</td>
+                                         <td>Click</td>
+                                         <td></td>
+                                      </tr>
+                                      <tr>
+                                         <td>1/1/2021</td>
+                                         <td>Blood Pressure</td>
+                                         <td>Dr.Williams</td>
+                                         <td>Click</td>
+                                         <td></td>
+                                      </tr>
+                                      <tr>
+                                         <td>1/1/2021</td>
+                                         <td>Blood Pressure</td>
+                                         <td>Dr.Kate</td>
+                                         <td>Click</td>
+                                         <td></td>
+                                      </tr>
+                                     </tbody>
                                 </table>
                             </div>
                         </div>
