--- a/src/app/pages/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard/dashboard.component.scss
@@ -61,5 +61,5 @@
     height: 150px
 }
 .table-striped tbody tr:nth-of-type(odd).green{
-    background-color: #63BA76 !important;
+    background-color: #70ad47 !important;
 }
