--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     font-family: Muli,sans-serif !important;
+    font-weight: 600;
+}
+code, kbd, pre, samp{
+    font-family: Muli,sans-serif !important;
+    // font-weight: bold;
+
 }
